--- a/css/style.css
+++ b/css/style.css
@@ -6,3 +6,6 @@ h2 { font-family: "Helvetica";
 font-size: 25px; font-style:italic; font-variant:small-caps;  }
 span{font-family: "nasaliza";
 font-size: 40px; font-style:italic; font-variant:small-caps; color:rgb(253, 180, 44);}
+#message{
+    display: none;
+}
